[package]
name = "cyoa-server-rust"
version = "0.1.0"
authors = ["Evan <EvanLDouglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
failure = "0.1.8"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
